--- a/index.html
+++ b/index.html
@@ -239,8 +239,8 @@
             {
                 name: { en: "Fazle Rabbi", bn: "ফজলে রাব্বি" },
                 job: { en: "Operator, Pads", bn: "অপারেটর, প্যাডস" },
-                phone: "01732294167 ",
-                whatsapp: "1234567890",
+                phone: "01732294167",
+                whatsapp: "https://wa.me/8801732294167",
                 facebook: "f.rabbi.90",
                 image: "img/Rabbi.png",
                 description: {
