--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@
                 name: { en: "Fazle Rabbi", bn: "ফজলে রাব্বি" },
                 job: { en: "Operator, Pads", bn: "অপারেটর, প্যাডস" },
                 phone: "01732294167",
-                whatsapp: "https://wa.me/8801732294167",
+                whatsapp:"//send?phone=8801732294167",
                 facebook: "f.rabbi.90",
                 image: "img/Rabbi.png",
                 description: {
